# elevaite-test

./: .dockerignore  .env  .env.backend  .env.example  .env.frontend  .env.staging  .gitignore  AUTHZ_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  RBAC_PRESENTATION_SUMMARY.md  RBAC_SYSTEM_OVERVIEW.md  README.md  TOKENIZER_WORKFLOW_IMPLEMENTATION_PLAN.md  create_rag_agent.py  docker-compose.backend.yaml  docker-compose.dev.yaml  docker-compose.frontend.yaml  docker-compose.yaml  inject-and-deploy.mjs  install_backend_deps.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  superfrontploy.mjs  test_openai_tokenizer.js  test_production_hybrid_workflow.py  test_rag_tools.py  turbo.json  variables.json  workflow-engine-features-overview.md  workflow_engine.db
creative_dashboard_backend/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
creative_dashboard_backend/app/: db_connector.py  main.py  model.py  sql_agent_factory.py  sql_agent_inference.py
elevaite_backend/elevaite_client/: .env  pyproject.toml
elevaite_backend/elevaite_client/tests/: conftest.py  test_embedding_services.py  test_embeddings.py  test_model_provider_factory.py  test_onprem_text_generation_service.py  test_openai_text_generation_provider.py  test_openai_text_generation_service.py  test_text_generation_services.py
elevaite_backend/elevaitedblib/: pyproject.toml
elevaite_backend/elevaitedblib/tests/: ExamplePipeline.json  conftest.py
elevaite_backend/fastapi-logger/: README.md  pyproject.toml  run_tests.sh
elevaite_backend/fastapi-logger/examples/: combined_example.py  decorator_example.py  opentelemetry_example.py  simple_example.py
elevaite_backend/fastapi-logger/fastapi_logger/: __init__.py  logger.py
elevaite_backend/fastapi-logger/tests/: test_base_logger.py  test_opentelemetry_logger.py
elevaite_backend/flyte-worker/: main.py  pyproject.toml  requirements.txt
elevaite_backend/flyte-worker/worker/: main.py
elevaite_backend/llm-gateway/: .env  README.md  pyproject.toml
elevaite_backend/llm-gateway/llm_gateway/: services.py
elevaite_backend/llm-gateway/tests/: conftest.py  test_embedding_providers.py  test_embedding_services.py  test_mocked_text_generation_providers.py  test_model_provider_factory.py  test_openai_text_generation_provider.py  test_text_generation_providers.py  test_text_generation_services.py  test_utilities.py  test_vision_providers.py
elevaite_backend/rbac/: .env  pyproject.toml
elevaite_backend/rbac-lib/: pyproject.toml
elevaite_backend/rbac-lib/rbac_lib/: .env  __init__.py
elevaite_backend/rbac/alembic/: env.py
elevaite_backend/rbac/app/: main.py
elevaite_backend/rbac/rbac_api/: .env  (+3 more)
etl/: .env  Dockerfile  pyproject.toml  requirements.txt
etl/app/: graph.py  lcloaders.py  main.py
etl/files/: preprocess.py  vectorize.py
exceltoppt/middleware/: Dockerfile  Presentation.py  functions.py  main.py  post-processing-excel.py  pre-processing-excel.py  process-excel.py  pyproject.toml  utils.py
python_apps/agent_studio/: ADAPTER_MIGRATION_GUIDE.md  ENDPOINT_FIXES_SUMMARY.md  MIGRATION_PROGRESS.md  README.md  RETOOLING_COMPLETE.md  RETOOLING_SESSION_SUMMARY.md  SDK_MIGRATION_COMPLETE.md  SESSION_FIX_SUMMARY.md  TOOLS_MIGRATION_PLAN.md  WORKFLOW_ENDPOINTS_COMPLETE.md  pyproject.toml  pytest.ini
python_apps/auth_api/: .env  .env.local.example  .env.production.template  .env.test  ADMIN_ENDPOINTS_SUMMARY.md  Dockerfile  RBAC_COMPLETENESS_AUDIT.md  README.md  TESTING.md  TESTING_COMPLETE.md  TEST_RESULTS.md  USER_STATUS_ANALYSIS.md  VSCODE_LAUNCH_CONFIG.md  alembic.ini  conftest.py  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  opa_config.yaml  pyproject.toml  pytest.ini
python_apps/code-execution-service/: Dockerfile  pyproject.toml
python_apps/etl/: alembic.ini  pyproject.toml  requirements.txt
python_apps/flyte-worker/: main.py  pyproject.toml
python_apps/ingestion-service/: .env.example  Dockerfile  README.md  TESTING.md  __init__.py  dbos-config.yaml  pyproject.toml
python_apps/native-authentication/: pyproject.toml
python_apps/rbac/: pyproject.toml
python_apps/workers/: .env  main.py  pyproject.toml
python_apps/workflow-engine-poc/: .dockerignore  .env.example  ADMIN_GUIDE.md  CI_SETUP.md  CLEANUP_COMPLETE.md  COVERAGE_BASELINE.md  DELEGATED_PERMISSIONS.md  DYNAMIC_PERMISSIONS.md  Dockerfile  GRANULAR_ACTIONS.md  PERMISSION_ARCHITECTURE.md  PHASE1_CLEANUP_SUMMARY.md  PHASE1_COMPLETE.md  PHASE7_COMPLETE.md  PROJECT_STATUS.md  QUICK_WINS.md  RBAC_INTEGRATION.md  RBAC_TEST_COVERAGE.md  README.md  REORGANIZATION.md  ROLE_PERMISSIONS.md  TESTING.md  TEST_RESULTS.md  TEST_SUITE_EVALUATION.md  TEST_TODO.md  TYPE_SAFETY_ANALYSIS.md  TYPE_SAFETY_IMPROVEMENTS.md  __init__.py  alembic.ini  configure_granular_policies.py  coverage_baseline.txt  create_superuser_and_configure.py  dbos-config.yaml  openapi.json  pyproject.toml  pytest.ini  requirements.txt  test_comprehensive_rbac.py  test_granular_actions.py  test_with_real_rbac.py  (+1 more)
python_packages/db-core/: README.md  coverage.xml  pyproject.toml  pytest.ini
python_packages/elevaite_client/: pyproject.toml
python_packages/elevaite_ingestion/: .gitignore  config.json  ingest_main.py  pdf_layers.json  pyproject.toml  requirements.txt  resources.txt
python_packages/elevaitedblib/: pyproject.toml
python_packages/llm-gateway/: pyproject.toml
python_packages/rbac-lib/: pyproject.toml
python_packages/rbac-sdk/: INTEGRATION_TEST_SUMMARY.md  Makefile  NEXT_STEPS.md  README.md  TESTING_COMPLETE.md  TESTING_PLAN.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini
python_packages/workflow-core-sdk/: A2A_INTEGRATION.md  EXECUTION_SERVICE.md  MCP_PROTOCOL_COMPLIANCE.md  QUICK_START.md  README.md  README_UI_METADATA.md  alembic.ini  coverage.json  migrate.sh  pyproject.toml
workers/: .env  Dockerfile  pyproject.toml
workers/ingest/: Dockerfile  pyproject.toml  s3_ingest_worker.py
workers/preprocess/: Dockerfile  preprocess_worker.py  pyproject.toml  vectordb.py
(+4227 files in other folders)
