[project]
name = "elevAIte"
version = "0.0.0"
description = "elevAIte monorepo setup using UV"
authors = [
  {name="Panagiotis Vamvakas", email="<57200277+vuxxs@users.noreply.github.com>"}
]
requires-python = "~=3.11"
readme = "README.md"
dependencies = []


[tool.uv.workspace]
members = ["python_apps/*", "python_packages/*"]
exclude = ["elevaite_backend/*"]