[project]
name = "elevAIte"
version = "2.0"
description = "ElevAIte monorepo setup using UV"
authors = [
	{ name = "Panagiotis Vamvakas", email = "<57200277+vuxxs@users.noreply.github.com>" },
]
requires-python = "==3.11.11"
readme = "README.md"
dependencies = []


[tool.uv.workspace]
members = ["python_apps/*", "python_packages/*"]
exclude = [
	"elevaite_backend/*",
	"python_apps/arlo_backend",
	"python_apps/exceltoppt",
	"python_apps/media_backend",
	"python_apps/pipelines",
	"python_apps/sla_chatbot_backend",
	"python_apps/ingestion_demo",
	"python_apps/toshiba_backends",
	"python_packages/email_middleware",
	"python_apps/toshiba_backends",
	"python_apps/ingestion_demo",
	"python_apps/rbac",
]

[tool.uv.sources]
"elevaite-ingestion" = { workspace = true }
