[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
redis = "^5.0.1"
qdrant-client = "^1.7.0"
langchain = "^0.1.0"
fastapi = "^0.109.0"
metaflow = "^2.10.9"
argo-workflows = "^6.5.4"
uvicorn = "^0.26.0"
websockets = "^12.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
