[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
redis = "^5.0.1"
qdrant-client = "^1.7.0"
langchain = "^0.1.0"
fastapi = "^0.109.0"
metaflow = "^2.10.9"
argo-workflows = "^6.5.4"
uvicorn = "^0.26.0"
websockets = "^12.0"
python-multipart = "^0.0.6"
unstructured = "~0.11.6"
tiktoken = ">=0.5.1,<0.6.0"
openai = "0.28.1"
lakefs = "^0.2.1"
boto3 = "^1.34.26"
python-dotenv = "^1.0.1"
botocore = "^1.34.26"
boto-s3-router = "^0.0.3"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
