[tool.poetry]
name = "elevaite_client"
version = "0.1.1"
description = ""
authors = ["John Zachariadis <johnbelly95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pika = "^1.3.2"
pydantic = ">=1.10.5,<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
