[tool.poetry]
name = "elevaite_client"
version = "0.1.2"
description = ""
authors = ["John Zachariadis <johnbelly95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pika = "^1.3.2"
pydantic = ">=1.10.5,<2"
openai = "^1.33.0"
lakefs = "^0.6.2"
qdrant-client = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
