[tool.poetry]
name = "elevaitelib"
version = "0.2.12"
description = ""
authors = ["John Zachariadis <johnbelly95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = ">=1.10.5,<2"
email-validator = "^2.1.1"
sqlalchemy-json = "^0.7.0"
qdrant-client = "^1.9.1"
elevaite_client = { path = "../elevaite_client", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
