[project]
name = "fastapi-logger"
version = "0.1.0"
description = "Enhanced logging utility for FastAPI applications with AWS CloudWatch integration"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "boto3>=1.37.16",
]

[project.optional-dependencies]
test = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fastapi_logger*"]