[tool.poetry]
name = "rbac_lib"
version = "0.1.0"
description = ""
authors = ["John Zachariadis <johnbelly95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "0.111.0"
requests = "2.31.0"
redis = "5.0.4"
elevaitelib = { path = "../elevaitedblib", develop = true }
fusionauth-client = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
