[tool.poetry]
name = "rbac_api"
version = "0.1.0"
description = ""
authors = ["Akash Bharadwaj Karthik <bharadwajkarthik.a@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
alembic = "^1.13.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.6.1"
email-validator = "^2.1.1"
fastapi = "0.109.0"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.6"
mako = "1.3.2"
markupsafe = "2.1.5"
psycopg2-binary = "2.9.9"
pycparser = "2.21"
pydantic = {version = "1.10.14", extras = ["email"]}
pydantic-core = "2.16.3"
python-dotenv = "1.0.1"
redis = "5.0.3"
requests = "2.31.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.27"
starlette = "0.35.1"
typing-extensions = "4.9.0"
urllib3 = "~2.0.7"
uvicorn = "^0.26.0"
elevaitedb = { path = "../elevaitedblib", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
