[tool.poetry]
name = "exceltoppt"
version = "0.1.0"
description = "Generate Slide Deck from Excel and ask questions"
authors = ["Your Name <you@example.com>"]
license = "iOPEX Technologies, inc."
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
openai = "~1.3.1"
fastapi = "~0.100.1"
langchain = "~0.0.191"
numpy = "~1.26.0"
openpyxl = "~3.1.2"
pandas = "~2.1.1"
pydantic = "~1.10.13"
python-pptx = "~0.6.22"
pyyaml = "~6.0.1"
streamlit = "~1.27.2"
uvicorn = "~0.23.2"
aiofiles = "~23.2.1"
python-multipart = "~0.0.6"
chromadb = "~0.4.14"
chroma-hnswlib = "~0.7.3"
tiktoken = "~0.5.1"
aspose-slides = "~23.10.0"
reportlab = "~4.0.7"
markdown = "^3.5.1"
langchain-experimental = "~0.0.42"
tabulate = "~0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
