[project]
name = "etl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "redis>=5.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "urllib3~=2.0.7",
    "python-dotenv>=1.0.1",
    "pika>=1.3.2",
    "elasticsearch>=8.13.1",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "qdrant-client>=1.9.1",
    "flytekit~=1.12.0",
    "fastjsonschema>=2.19.1",
    "elevaitelib",
    "rbac_lib",
]

[tool.uv.sources]
elevaitelib = { workspace = true }
rbac_lib = { workspace = true }
