[project]
name = "etl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "redis>=5.0.1",
    "fastapi>=0.114.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "urllib3~=2.0.7",
    "python-dotenv>=1.0.1",
    "pika>=1.3.2",
    "elasticsearch>=8.13.1",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "qdrant-client>=1.9.1",
    "flytekit~=1.16.3",
    "fastjsonschema>=2.19.1",
    "elevaitelib",
    "rbac_lib",
    "rbac_sdk",
]

[tool.uv.sources]
elevaitelib = { workspace = true }
rbac_lib = { workspace = true }
rbac_sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflow_engine_poc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1", "httpx>=0.25.2"]
