[project]
name = "native-authentication"
version = "0.1.0"
description = "Native authentication module for Elevaite backend services"
authors = [
  {name="Panagiotis Vamvakas", email="<57200277+vuxxs@users.noreply.github.com>"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "pydantic>=1.10.5",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "sqlalchemy>=2.0.21",
  "alembic>=1.12.0",
  "uvicorn>=0.23.2",
  "pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "httpx>=0.24.0",
  "pytest-cov>=4.0.0"
]
