[project]
name = "rbac_api"
version = "0.1.0"
description = ""
authors = [{name="Akash Bharadwaj Karthik", email="<bharadwajkarthik.a@northeastern.edu>"}
]
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "alembic>=1.13.1",
    "annotated-types==0.6.0",
    "anyio==4.2.0",
    "certifi>=2024.2.2",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dnspython==2.6.1",
    "email-validator>=2.1.1",
    "fastapi==0.111.0",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "idna==3.6",
    "mako==1.3.2",
    "markupsafe==2.1.5",
    "psycopg2-binary==2.9.9",
    "pycparser==2.21",
    "pydantic[email]>=1.10.15",
    "pydantic-core>=2.18.2",
    "python-dotenv==1.0.1",
    "redis==5.0.4",
    "requests>=2.31.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.30",
    "starlette==0.37.2",
    "typing-extensions",
    "urllib3~=2.0.7",
    "uvicorn>=0.29.0",
    "elevaitelib",
    "rbac_lib",
]

[tool.uv.sources]
rbac_lib = { workspace = true }
elevaitelib = { workspace = true }

