[project]
name = "workers"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "pika>=1.3.2",
    "unstructured>=0.13.6",
    "qdrant-client>=1.9.1",
    "openai>=1.26",
    "lakefs>=0.6.0",
    "python-docx>=1.1.2",
    "elasticsearch>=8.13.0",
    "redis>=5.0.4",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.6.0",
    "boto3>=1.34.100",
    "botocore>=1.34.100",
    "packaging==23.2",
    "langchain>=0.1.16",
    "elevaitelib",
    "elevaite_client",
]

[tool.uv.sources]
elevaitelib = { workspace = true }
elevaite_client = { workspace = true }
