[project]
name = "workflow-engine-poc"
version = "0.1.0"
description = "Unified Workflow Execution Engine PoC - A clean, agnostic workflow execution engine"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.1",
    "llm-gateway",
    "elevaite-ingestion",
    "db-core",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "prometheus-client>=0.17.0",
]

[tool.uv.sources]
llm-gateway = { workspace = true }
elevaite-ingestion = { workspace = true }
db-core = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1", "httpx>=0.25.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflow_engine_poc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1", "httpx>=0.25.2"]
