[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-core"
description = "A package for implementing multitenancy in FastAPI applications with SQLAlchemy and PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Zachariadis", email = "your.email@example.com" }]
maintainers = [{ name = "John Zachariadis", email = "your.email@example.com" }]
dependencies = [
    "fastapi>=0.68.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0; platform_python_implementation != 'PyPy'",
    "psycopg2cffi>=2.9.0; platform_python_implementation == 'PyPy'",
    "asyncpg>=0.24.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.16.0",
    "black>=21.7b0",
    "isort>=5.9.3",
    "mypy>=0.910",
    "ruff>=0.0.85",
]
docs = ["mkdocs>=1.3.0", "mkdocs-material>=8.3.9", "mkdocstrings>=0.19.0"]

[tool.hatch.version]
path = "src/db_core/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "LICENSE", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/db_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
