[project]
name = "elevaite_client"
version = "0.1.2"
description = ""
authors = [{ name = "John Zachariadis", email = "<johnbelly95@gmail.com>" }]
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
  "pika>=1.3.2",
  "pydantic>=1.10.5",
  "openai>=1.33.0",
  "lakefs>=0.6.2",
  "qdrant-client>=1.9.1",
]
