[project]
name = "elevaite-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "boto3>=1.37.8",
    "chromadb>=0.6.3",
    "crawl4ai>=0.5.0.post1",
    "docling>=2.25.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.40",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.7",
    "llama-parse>=0.6.2",
    "markitdown>=0.0.1a5",
    "openai>=1.65.2",
    "pdfplumber>=0.11.5",
    "pinecone>=6.0.1",
    "pymupdf4llm>=0.0.17",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.2",
]