[project]
name = "elevaitelib"
version = "0.2.12"
description = ""
authors = [{ name = "John Zachariadis", email = "<johnbelly95@gmail.com>" }]
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "psycopg2-binary>=2.9.9",
  "pydantic>=1.10.5,<2",
  "email-validator>=2.1.1",
  "sqlalchemy-json>=0.7.0",
  "qdrant-client>=1.9.1",
  "elevaite_client",
  "opensearch-py>=2.6.0",
  "boto3>=1.37.1",
  "requests>=2.31.0",
  "requests-aws4auth>=1.2.3",
]

[tool.uv.sources]
"elevaite-client" = { workspace = true }
