[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbac_lib"
version = "0.1.0"
description = ""
authors = [{ name = "John Zachariadis", email = "johnbelly95@gmail.com" }]
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
  "fastapi==0.114.0",
  "requests>=2.31.0",
  "redis==5.0.4",
  "fusionauth-client>=1.53.0",
  "elevaitelib",
]

[tool.uv.sources]
elevaitelib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["rbac_lib"]
