[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbac-sdk"
version = "0.1.0"
description = "RBAC SDK for Elevaite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rbac_sdk"]

